--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <li><a href="products.html">প্রোডাক্টস</a></li>
               <li><a href="business.html">ব্যবসার সুযোগ</a></li>
               <li><a href="success-stories.html">সাফল্যের গল্প</a></li>
-              <li><a href="contact.html">যোগাযোগ</a></li>
+              <li><a href="#whatsapp">যোগাযোগ</a></li>
             </ul>
           </nav>
         </div>
@@ -46,8 +46,8 @@
         <div class="hero-content">
           <h1>প্রাকৃতিক স্বাস্থ্য এবং আর্থিক স্বাধীনতা – একসাথে</h1>
           <p>
-            DXN-এর প্রোডাক্ট ও ব্যবসার সুযোগ আপনার সুস্থ জীবন ও আয়ের পথ তৈরি করবে।
-            আজই শুরু করুন আপনার সাফল্যের যাত্রা।
+            DXN-এর প্রোডাক্ট ও ব্যবসার সুযোগ আপনার সুস্থ জীবন ও আয়ের পথ তৈরি
+            করবে। আজই শুরু করুন আপনার সাফল্যের যাত্রা।
           </p>
           <a
             href="https://wa.me/8801707042018?text=আমি%20DXN%20এ%20রেজিস্ট্রেশন%20করতে%20চাই"
@@ -69,21 +69,24 @@
             <i class="fas fa-heartbeat"></i>
             <h3>স্বাস্থ্য সমস্যা</h3>
             <p>
-              কাজের চাপ, অস্বাস্থ্যকর খাবার ও অনিয়মিত জীবনযাপনের কারণে কি আপনার শরীরে সমস্যা দেখা দিচ্ছে?
+              কাজের চাপ, অস্বাস্থ্যকর খাবার ও অনিয়মিত জীবনযাপনের কারণে কি আপনার
+              শরীরে সমস্যা দেখা দিচ্ছে?
             </p>
           </div>
           <div class="ps-item">
             <i class="fas fa-money-bill-wave"></i>
             <h3>আর্থিক চাপ</h3>
             <p>
-              মাস শেষে টাকা শেষ হয়ে যাওয়া, ঋণের বোঝা কিংবা পরিবারের চাহিদা পূরণে অসুবিধায় আছেন?
+              মাস শেষে টাকা শেষ হয়ে যাওয়া, ঋণের বোঝা কিংবা পরিবারের চাহিদা পূরণে
+              অসুবিধায় আছেন?
             </p>
           </div>
           <div class="ps-item">
             <i class="fas fa-clock"></i>
             <h3>সময়ের অভাব</h3>
             <p>
-              চাকরির ব্যস্ততায় নিজের জন্য সময় পাচ্ছেন না, আর স্বপ্ন পূরণের সুযোগ হারাচ্ছেন?
+              চাকরির ব্যস্ততায় নিজের জন্য সময় পাচ্ছেন না, আর স্বপ্ন পূরণের সুযোগ
+              হারাচ্ছেন?
             </p>
           </div>
         </div>
@@ -91,16 +94,16 @@
     </section>
 
     <!-- Products Section on Home -->
-<section class="products" id="products">
-  <div class="container">
-    <h2 class="section-title">আমাদের প্রোডাক্টস</h2>
-    <div class="product-grid" id="home-products"></div>
+    <section class="products" id="products">
+      <div class="container">
+        <h2 class="section-title">আমাদের প্রোডাক্টস</h2>
+        <div class="product-grid" id="home-products"></div>
 
-    <div class="see-more">
-      <a href="products.html" class="btn">See More</a>
-    </div>
-  </div>
-</section>
+        <div class="see-more">
+          <a href="products.html" class="btn">See More</a>
+        </div>
+      </div>
+    </section>
 
     <!-- ব্যবসার সুযোগ সেকশন -->
     <section class="business-opportunity" id="opportunity">
@@ -108,7 +111,9 @@
         <div class="bo-content">
           <h2>ঝুঁকিমুক্ত ব্যবসার সুযোগ</h2>
           <p>
-            DXN-এ ব্যবসা শুরু করতে আপনার কোনো পণ্য কিনতে হবে না। শুধু ফ্রি রেজিস্ট্রেশন করুন এবং আপনার রেফারেল লিংক শেয়ার করুন। তারপর থেকেই আয় শুরু হবে।
+            DXN-এ ব্যবসা শুরু করতে আপনার কোনো পণ্য কিনতে হবে না। শুধু ফ্রি
+            রেজিস্ট্রেশন করুন এবং আপনার রেফারেল লিংক শেয়ার করুন। তারপর থেকেই
+            আয় শুরু হবে।
           </p>
 
           <div class="benefits">
@@ -146,13 +151,34 @@
         <h2 class="section-title">সাফল্যের গল্প</h2>
         <div class="testimonial-grid">
           <div class="testimonial">
-            <iframe width="100%" height="200" src="https://www.youtube.com/embed/2NisSdaman0" title="Success Story 1" frameborder="0" allowfullscreen></iframe>
+            <iframe
+              width="100%"
+              height="200"
+              src="https://www.youtube.com/embed/2NisSdaman0"
+              title="Success Story 1"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
           </div>
           <div class="testimonial">
-            <iframe width="100%" height="200" src="https://www.youtube.com/embed/Wot-MZhCM5c" title="Success Story 2" frameborder="0" allowfullscreen></iframe>
+            <iframe
+              width="100%"
+              height="200"
+              src="https://www.youtube.com/embed/Wot-MZhCM5c"
+              title="Success Story 2"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
           </div>
           <div class="testimonial">
-            <iframe width="100%" height="200" src="https://www.youtube.com/embed/tmFjlXq4Yf0" title="Success Story 3" frameborder="0" allowfullscreen></iframe>
+            <iframe
+              width="100%"
+              height="200"
+              src="https://www.youtube.com/embed/tmFjlXq4Yf0"
+              title="Success Story 3"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
           </div>
         </div>
       </div>
@@ -166,7 +192,9 @@
           <div class="step">
             <div class="step-number">১</div>
             <h3>WhatsApp-এ যোগাযোগ করুন</h3>
-            <p>নিচের বাটনে ক্লিক করে সরাসরি আমাদের সাথে WhatsApp-এ মেসেজ করুন।</p>
+            <p>
+              নিচের বাটনে ক্লিক করে সরাসরি আমাদের সাথে WhatsApp-এ মেসেজ করুন।
+            </p>
           </div>
           <div class="step">
             <div class="step-number">২</div>
@@ -176,7 +204,10 @@
           <div class="step">
             <div class="step-number">৩</div>
             <h3>নেটওয়ার্ক বিল্ড করুন ও আয় শুরু করুন</h3>
-            <p>রেজিস্ট্রেশন শেষে ব্যবসা শিখুন, নেটোওয়ার্ক মার্কেটিং করুন। টিম তৈরি করুন এবং আয় শুরু করুন।</p>
+            <p>
+              রেজিস্ট্রেশন শেষে ব্যবসা শিখুন, নেটোওয়ার্ক মার্কেটিং করুন। টিম
+              তৈরি করুন এবং আয় শুরু করুন।
+            </p>
           </div>
         </div>
 
@@ -184,7 +215,8 @@
           <div class="whatsapp-info">
             <h3>সরাসরি WhatsApp-এ যোগাযোগ করুন</h3>
             <p>
-              নিচের বাটনে ক্লিক করে WhatsApp-এ মেসেজ পাঠান এবং ফ্রি রেজিস্ট্রেশন সম্পন্ন করুন। আমাদের টিম আপনাকে ধাপে ধাপে বুঝিয়ে দেবে।
+              নিচের বাটনে ক্লিক করে WhatsApp-এ মেসেজ পাঠান এবং ফ্রি রেজিস্ট্রেশন
+              সম্পন্ন করুন। আমাদের টিম আপনাকে ধাপে ধাপে বুঝিয়ে দেবে।
             </p>
           </div>
           <a
@@ -205,7 +237,9 @@
           <div class="footer-section">
             <h3>DXN সম্পর্কে</h3>
             <p>
-              DXN একটি আন্তর্জাতিক কোম্পানি যা মূলত গ্যানোডার্মা ভিত্তিক স্বাস্থ্য পণ্য তৈরি করে। বিশ্বের 180+ দেশে আমাদের কার্যক্রম রয়েছে।
+              DXN একটি আন্তর্জাতিক কোম্পানি যা মূলত গ্যানোডার্মা ভিত্তিক
+              স্বাস্থ্য পণ্য তৈরি করে। বিশ্বের 180+ দেশে আমাদের কার্যক্রম
+              রয়েছে।
             </p>
           </div>
           <div class="footer-section">
@@ -225,7 +259,9 @@
             <div class="social-links">
               <a href="#"><i class="fab fa-facebook"></i></a>
               <a href="#"><i class="fab fa-youtube"></i></a>
-              <a href="https://wa.me/8801707042018" target="_blank"><i class="fab fa-whatsapp"></i></a>
+              <a href="https://wa.me/8801707042018" target="_blank"
+                ><i class="fab fa-whatsapp"></i
+              ></a>
               <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
           </div>
