updated contact link in all the html files

--- a/business.html
+++ b/business.html
@@ -35,7 +35,12 @@
               <li><a href="products.html">প্রোডাক্টস</a></li>
               <li><a href="business.html" class="active">ব্যবসার সুযোগ</a></li>
               <li><a href="success-stories.html">সাফল্যের গল্প</a></li>
-              <li><a href="contact.html">যোগাযোগ</a></li>
+              <li>
+                <a
+                  href="https://wa.me/8801707042018?text=আমি%20DXN%20সম্পর্কে%20জানতে%20চাই"
+                  >যোগাযোগ</a
+                >
+              </li>
             </ul>
           </nav>
         </div>
@@ -53,52 +58,54 @@
     </section>
 
     <!-- ব্যবসার সুযোগ সেকশন -->
-<section class="business-opportunity">
-  <div class="container">
-    <h2 class="section-title">কেন DXN এ যোগ দেবেন?</h2>
+    <section class="business-opportunity">
+      <div class="container">
+        <h2 class="section-title">কেন DXN এ যোগ দেবেন?</h2>
 
-    <div class="benefits">
-      <div class="benefit-card">
-        <div class="benefit-icon">
-          <i class="fas fa-wallet"></i>
+        <div class="benefits">
+          <div class="benefit-card">
+            <div class="benefit-icon">
+              <i class="fas fa-wallet"></i>
+            </div>
+            <h3>কম বিনিয়োগে শুরু</h3>
+            <p>
+              রেজিস্ট্রেশন ফি খুবই কম এবং কোনো বাধ্যতামূলক প্রোডাক্ট কিনতে হয়
+              না।
+            </p>
+          </div>
+
+          <div class="benefit-card">
+            <div class="benefit-icon">
+              <i class="fas fa-clock"></i>
+            </div>
+            <h3>নমনীয় সময়</h3>
+            <p>নিজের সুবিধামতো সময়ে কাজ করুন — পার্টটাইম বা ফুলটাইম।</p>
+          </div>
+
+          <div class="benefit-card">
+            <div class="benefit-icon">
+              <i class="fas fa-globe"></i>
+            </div>
+            <h3>বিশ্বব্যাপী সুযোগ</h3>
+            <p>
+              DXN এর ব্যবসা ১৮০+ দেশে চালু, তাই যেকোনো স্থান থেকে আয় করার
+              সুযোগ।
+            </p>
+          </div>
+
+          <div class="benefit-card">
+            <div class="benefit-icon">
+              <i class="fas fa-chart-line"></i>
+            </div>
+            <h3>অসীম আয়ের সম্ভাবনা</h3>
+            <p>
+              সরাসরি বিক্রয়, টিম বোনাস, লিডারশিপ ও গ্লোবাল ইনসেনটিভস সহ একাধিক
+              আয়ের উৎস।
+            </p>
+          </div>
         </div>
-        <h3>কম বিনিয়োগে শুরু</h3>
-        <p>
-          রেজিস্ট্রেশন ফি খুবই কম এবং কোনো বাধ্যতামূলক প্রোডাক্ট কিনতে হয় না।
-        </p>
       </div>
-
-      <div class="benefit-card">
-        <div class="benefit-icon">
-          <i class="fas fa-clock"></i>
-        </div>
-        <h3>নমনীয় সময়</h3>
-        <p>নিজের সুবিধামতো সময়ে কাজ করুন — পার্টটাইম বা ফুলটাইম।</p>
-      </div>
-
-      <div class="benefit-card">
-        <div class="benefit-icon">
-          <i class="fas fa-globe"></i>
-        </div>
-        <h3>বিশ্বব্যাপী সুযোগ</h3>
-        <p>
-          DXN এর ব্যবসা ১৮০+ দেশে চালু, তাই যেকোনো স্থান থেকে আয় করার সুযোগ।
-        </p>
-      </div>
-
-      <div class="benefit-card">
-        <div class="benefit-icon">
-          <i class="fas fa-chart-line"></i>
-        </div>
-        <h3>অসীম আয়ের সম্ভাবনা</h3>
-        <p>
-          সরাসরি বিক্রয়, টিম বোনাস, লিডারশিপ ও গ্লোবাল ইনসেনটিভস সহ একাধিক আয়ের উৎস।
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
-
+    </section>
 
     <!-- কিভাবে শুরু করবেন সেকশন -->
     <section class="how-to-start">
@@ -156,51 +163,50 @@
       </div>
     </section>
 
-       <!-- আয়ের পরিকল্পনা সেকশন -->
-<section class="income-plan">
-  <div class="container">
-    <h2 class="section-title">আয়ের পরিকল্পনা</h2>
+    <!-- আয়ের পরিকল্পনা সেকশন -->
+    <section class="income-plan">
+      <div class="container">
+        <h2 class="section-title">আয়ের পরিকল্পনা</h2>
 
-    <div class="plan-cards">
-      <div class="plan-card">
-        <h3>সরাসরি বিক্রয় লাভ</h3>
-        <div class="plan-percentage">20% – 25%</div>
-        <p>পণ্য কম দামে কিনে বেশি দামে বিক্রি করে তাৎক্ষণিক লাভ।</p>
+        <div class="plan-cards">
+          <div class="plan-card">
+            <h3>সরাসরি বিক্রয় লাভ</h3>
+            <div class="plan-percentage">20% – 25%</div>
+            <p>পণ্য কম দামে কিনে বেশি দামে বিক্রি করে তাৎক্ষণিক লাভ।</p>
+          </div>
+
+          <div class="plan-card">
+            <h3>গ্রুপ বোনাস</h3>
+            <div class="plan-percentage">6% – 21%</div>
+            <p>আপনার টিমের মোট PV এর উপর ভিত্তি করে মাসিক বোনাস।</p>
+          </div>
+
+          <div class="plan-card">
+            <h3>স্টার ও ডেভেলপমেন্ট বোনাস</h3>
+            <div class="plan-percentage">বিশেষ</div>
+            <p>নতুন স্টার এজেন্ট ও লিডার তৈরি করলে অতিরিক্ত আয়।</p>
+          </div>
+
+          <div class="plan-card">
+            <h3>লিডারশিপ বোনাস</h3>
+            <div class="plan-percentage">ডায়মন্ড থেকে</div>
+            <p>ডায়মন্ড লেভেল অর্জনের পর আসল বড় ইনকামের উৎস।</p>
+          </div>
+
+          <div class="plan-card">
+            <h3>ইন্টারন্যাশনাল প্রফিট শেয়ারিং</h3>
+            <div class="plan-percentage">গ্লোবাল</div>
+            <p>সারা বিশ্বের DXN বিক্রয় থেকে নির্দিষ্ট শেয়ার।</p>
+          </div>
+
+          <div class="plan-card">
+            <h3>ট্রাভেল সেমিনার ইনসেনটিভ</h3>
+            <div class="plan-percentage">ভ্রমণ</div>
+            <p>যোগ্য ডিস্ট্রিবিউটরদের জন্য ফ্রি বিদেশ ভ্রমণ ও সেমিনার।</p>
+          </div>
+        </div>
       </div>
-
-      <div class="plan-card">
-        <h3>গ্রুপ বোনাস</h3>
-        <div class="plan-percentage">6% – 21%</div>
-        <p>আপনার টিমের মোট PV এর উপর ভিত্তি করে মাসিক বোনাস।</p>
-      </div>
-
-      <div class="plan-card">
-        <h3>স্টার ও ডেভেলপমেন্ট বোনাস</h3>
-        <div class="plan-percentage">বিশেষ</div>
-        <p>নতুন স্টার এজেন্ট ও লিডার তৈরি করলে অতিরিক্ত আয়।</p>
-      </div>
-
-      <div class="plan-card">
-        <h3>লিডারশিপ বোনাস</h3>
-        <div class="plan-percentage">ডায়মন্ড থেকে</div>
-        <p>ডায়মন্ড লেভেল অর্জনের পর আসল বড় ইনকামের উৎস।</p>
-      </div>
-
-      <div class="plan-card">
-        <h3>ইন্টারন্যাশনাল প্রফিট শেয়ারিং</h3>
-        <div class="plan-percentage">গ্লোবাল</div>
-        <p>সারা বিশ্বের DXN বিক্রয় থেকে নির্দিষ্ট শেয়ার।</p>
-      </div>
-
-      <div class="plan-card">
-        <h3>ট্রাভেল সেমিনার ইনসেনটিভ</h3>
-        <div class="plan-percentage">ভ্রমণ</div>
-        <p>যোগ্য ডিস্ট্রিবিউটরদের জন্য ফ্রি বিদেশ ভ্রমণ ও সেমিনার।</p>
-      </div>
-    </div>
-  </div>
-</section>
-
+    </section>
 
     <!-- DXN আয়ের টেবিল -->
     <section class="income-table">
@@ -261,7 +267,6 @@
         </div>
       </div>
     </section>
-
 
     <!-- FAQ সেকশন -->
     <section class="faq-section">
