--- a/products.html
+++ b/products.html
@@ -25,7 +25,9 @@
       <div class="container">
         <div class="header-content">
           <div class="logo">
-            <a href="index.html"><i class="fas fa-leaf"></i> <span>DXN</span></a>
+            <a href="index.html"
+              ><i class="fas fa-leaf"></i> <span>DXN</span></a
+            >
           </div>
           <nav>
             <ul>
@@ -33,7 +35,12 @@
               <li><a href="products.html" class="active">প্রোডাক্টস</a></li>
               <li><a href="business.html">ব্যবসার সুযোগ</a></li>
               <li><a href="success-stories.html">সাফল্যের গল্প</a></li>
-              <li><a href="contact.html">যোগাযোগ</a></li>
+              <li>
+                <a
+                  href="https://wa.me/8801707042018?text=আমি%20DXN%20সম্পর্কে%20জানতে%20চাই"
+                  >যোগাযোগ</a
+                >
+              </li>
             </ul>
           </nav>
         </div>
@@ -45,7 +52,8 @@
       <div class="container">
         <h1>DXN প্রোডাক্টস</h1>
         <p>
-          প্রাকৃতিক উপাদানে তৈরি উচ্চমানের পণ্য, যা আপনার স্বাস্থ্য ও সৌন্দর্য উন্নত করতে সাহায্য করবে।
+          প্রাকৃতিক উপাদানে তৈরি উচ্চমানের পণ্য, যা আপনার স্বাস্থ্য ও সৌন্দর্য
+          উন্নত করতে সাহায্য করবে।
         </p>
       </div>
     </section>
@@ -55,12 +63,22 @@
       <div class="filters">
         <h2 class="filter-title">প্রোডাক্ট ফিল্টার করুন</h2>
         <div class="filter-buttons">
-          <button class="filter-btn active" data-filter="all">সব প্রোডাক্ট</button>
-          <button class="filter-btn" data-filter="health">হেলথ প্রোডাক্ট</button>
+          <button class="filter-btn active" data-filter="all">
+            সব প্রোডাক্ট
+          </button>
+          <button class="filter-btn" data-filter="health">
+            হেলথ প্রোডাক্ট
+          </button>
           <button class="filter-btn" data-filter="beverage">বেভারেজ</button>
-          <button class="filter-btn" data-filter="skincare">স্কিন কেয়ার</button>
-          <button class="filter-btn" data-filter="personal">পারসোনাল কেয়ার</button>
-          <button class="filter-btn" data-filter="supplement">সাপ্লিমেন্ট</button>
+          <button class="filter-btn" data-filter="skincare">
+            স্কিন কেয়ার
+          </button>
+          <button class="filter-btn" data-filter="personal">
+            পারসোনাল কেয়ার
+          </button>
+          <button class="filter-btn" data-filter="supplement">
+            সাপ্লিমেন্ট
+          </button>
         </div>
       </div>
     </div>
@@ -72,81 +90,162 @@
         <div class="product-grid">
           <!-- হেলথ প্রোডাক্ট -->
           <div class="product-card" data-category="health">
-            <div class="product-img" style="background-image: url('https://images.unsplash.com/photo-1584308666744-24d5c474f2ae?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');"></div>
+            <div
+              class="product-img"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1584308666744-24d5c474f2ae?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');
+              "
+            ></div>
             <div class="product-info">
               <span class="product-category">হেলথ প্রোডাক্ট</span>
               <h3>গ্যানোডার্মা ক্যাপসুল</h3>
-              <p>ইমিউনিটি সিস্টেমকে শক্তিশালী করে এবং শরীরের এনার্জি লেভেল বাড়ায়।</p>
+              <p>
+                ইমিউনিটি সিস্টেমকে শক্তিশালী করে এবং শরীরের এনার্জি লেভেল
+                বাড়ায়।
+              </p>
               <div class="product-price">৳ ১,২০০</div>
               <div class="product-actions">
-                <a href="https://wa.me/8801707042018?text=গ্যানোডার্মা%20ক্যাপসুল%20সম্পর্কে%20জানতে%20চাই" class="btn btn-whatsapp" target="_blank"><i class="fab fa-whatsapp"></i> অর্ডার</a>
-                <a href="product-details.html?id=ganoderma-capsule" class="btn btn-details">বিস্তারিত</a>
+                <a
+                  href="https://wa.me/8801707042018?text=গ্যানোডার্মা%20ক্যাপসুল%20সম্পর্কে%20জানতে%20চাই"
+                  class="btn btn-whatsapp"
+                  target="_blank"
+                  ><i class="fab fa-whatsapp"></i> অর্ডার</a
+                >
+                <a
+                  href="product-details.html?id=ganoderma-capsule"
+                  class="btn btn-details"
+                  >বিস্তারিত</a
+                >
               </div>
             </div>
           </div>
 
           <!-- বেভারেজ -->
           <div class="product-card" data-category="beverage">
-            <div class="product-img" style="background-image: url('https://images.unsplash.com/photo-1544787219-7f47ccb76574?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');"></div>
+            <div
+              class="product-img"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1544787219-7f47ccb76574?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');
+              "
+            ></div>
             <div class="product-info">
               <span class="product-category">বেভারেজ</span>
               <h3>গ্যানোডার্মা ইনস্ট্যান্ট কফি</h3>
               <p>প্রাকৃতিক গ্যানোডার্মা এক্সট্র্যাক্ট সমৃদ্ধ সুস্বাদু কফি।</p>
               <div class="product-price">৳ ৮৫০</div>
               <div class="product-actions">
-                <a href="https://wa.me/8801707042018?text=গ্যানোডার্মা%20ইনস্ট্যান্ট%20কফি%20সম্পর্কে%20জানতে%20চাই" class="btn btn-whatsapp" target="_blank"><i class="fab fa-whatsapp"></i> অর্ডার</a>
-                <a href="product-details.html?id=ganoderma-coffee" class="btn btn-details">বিস্তারিত</a>
+                <a
+                  href="https://wa.me/8801707042018?text=গ্যানোডার্মা%20ইনস্ট্যান্ট%20কফি%20সম্পর্কে%20জানতে%20চাই"
+                  class="btn btn-whatsapp"
+                  target="_blank"
+                  ><i class="fab fa-whatsapp"></i> অর্ডার</a
+                >
+                <a
+                  href="product-details.html?id=ganoderma-coffee"
+                  class="btn btn-details"
+                  >বিস্তারিত</a
+                >
               </div>
             </div>
           </div>
 
           <!-- স্কিন কেয়ার -->
           <div class="product-card" data-category="skincare">
-            <div class="product-img" style="background-image: url('https://images.unsplash.com/photo-1596462502278-27bfdc403348?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');"></div>
+            <div
+              class="product-img"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1596462502278-27bfdc403348?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');
+              "
+            ></div>
             <div class="product-info">
               <span class="product-category">স্কিন কেয়ার</span>
               <h3>গ্যানোডার্মা ফেসিয়াল ক্লিনজার</h3>
-              <p>প্রাকৃতিক উপাদানে তৈরি ফেসিয়াল ক্লিনজার যা ত্বককে পরিষ্কার ও উজ্জ্বল করে।</p>
+              <p>
+                প্রাকৃতিক উপাদানে তৈরি ফেসিয়াল ক্লিনজার যা ত্বককে পরিষ্কার ও
+                উজ্জ্বল করে।
+              </p>
               <div class="product-price">৳ ১,৫০০</div>
               <div class="product-actions">
-                <a href="https://wa.me/8801707042018?text=গ্যানোডার্মা%20ফেসিয়াল%20ক্লিনজার%20সম্পর্কে%20জানতে%20চাই" class="btn btn-whatsapp" target="_blank"><i class="fab fa-whatsapp"></i> অর্ডার</a>
-                <a href="product-details.html?id=ganoderma-cleanser" class="btn btn-details">বিস্তারিত</a>
+                <a
+                  href="https://wa.me/8801707042018?text=গ্যানোডার্মা%20ফেসিয়াল%20ক্লিনজার%20সম্পর্কে%20জানতে%20চাই"
+                  class="btn btn-whatsapp"
+                  target="_blank"
+                  ><i class="fab fa-whatsapp"></i> অর্ডার</a
+                >
+                <a
+                  href="product-details.html?id=ganoderma-cleanser"
+                  class="btn btn-details"
+                  >বিস্তারিত</a
+                >
               </div>
             </div>
           </div>
 
           <!-- পারসোনাল কেয়ার -->
           <div class="product-card" data-category="personal">
-            <div class="product-img" style="background-image: url('https://images.unsplash.com/photo-1595341888016-a392ef81b7de?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');"></div>
+            <div
+              class="product-img"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1595341888016-a392ef81b7de?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');
+              "
+            ></div>
             <div class="product-info">
               <span class="product-category">পারসোনাল কেয়ার</span>
               <h3>গ্যানোডার্মা টুথপেস্ট</h3>
-              <p>প্রাকৃতিক অ্যান্টিব্যাকটেরিয়াল টুথপেস্ট যা দাঁত ও মাড়ির স্বাস্থ্য রক্ষা করে।</p>
+              <p>
+                প্রাকৃতিক অ্যান্টিব্যাকটেরিয়াল টুথপেস্ট যা দাঁত ও মাড়ির
+                স্বাস্থ্য রক্ষা করে।
+              </p>
               <div class="product-price">৳ ৩২০</div>
               <div class="product-actions">
-                <a href="https://wa.me/8801707042018?text=গ্যানোডার্মা%20টুথপেস্ট%20সম্পর্কে%20জানতে%20চাই" class="btn btn-whatsapp" target="_blank"><i class="fab fa-whatsapp"></i> অর্ডার</a>
-                <a href="product-details.html?id=ganoderma-toothpaste" class="btn btn-details">বিস্তারিত</a>
+                <a
+                  href="https://wa.me/8801707042018?text=গ্যানোডার্মা%20টুথপেস্ট%20সম্পর্কে%20জানতে%20চাই"
+                  class="btn btn-whatsapp"
+                  target="_blank"
+                  ><i class="fab fa-whatsapp"></i> অর্ডার</a
+                >
+                <a
+                  href="product-details.html?id=ganoderma-toothpaste"
+                  class="btn btn-details"
+                  >বিস্তারিত</a
+                >
               </div>
             </div>
           </div>
 
           <!-- সাপ্লিমেন্ট -->
           <div class="product-card" data-category="supplement">
-            <div class="product-img" style="background-image: url('https://images.unsplash.com/photo-1583258292688-d0213dc5a3a8?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');"></div>
+            <div
+              class="product-img"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1583258292688-d0213dc5a3a8?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');
+              "
+            ></div>
             <div class="product-info">
               <span class="product-category">সাপ্লিমেন্ট</span>
               <h3>স্পিরুলিনা ট্যাবলেট</h3>
-              <p>পুষ্টিগুণে ভরপুর স্পিরুলিনা, যা শরীরের প্রোটিনের চাহিদা পূরণ করে।</p>
+              <p>
+                পুষ্টিগুণে ভরপুর স্পিরুলিনা, যা শরীরের প্রোটিনের চাহিদা পূরণ
+                করে।
+              </p>
               <div class="product-price">৳ ৯০০</div>
               <div class="product-actions">
-                <a href="https://wa.me/8801707042018?text=স্পিরুলিনা%20ট্যাবলেট%20সম্পর্কে%20জানতে%20চাই" class="btn btn-whatsapp" target="_blank"><i class="fab fa-whatsapp"></i> অর্ডার</a>
-                <a href="product-details.html?id=spirulina-tablets" class="btn btn-details">বিস্তারিত</a>
+                <a
+                  href="https://wa.me/8801707042018?text=স্পিরুলিনা%20ট্যাবলেট%20সম্পর্কে%20জানতে%20চাই"
+                  class="btn btn-whatsapp"
+                  target="_blank"
+                  ><i class="fab fa-whatsapp"></i> অর্ডার</a
+                >
+                <a
+                  href="product-details.html?id=spirulina-tablets"
+                  class="btn btn-details"
+                  >বিস্তারিত</a
+                >
               </div>
             </div>
           </div>
 
           <!-- আরও প্রোডাক্টস এখানে একই ফরম্যাটে যোগ করা যাবে -->
-
         </div>
       </div>
     </section>
@@ -157,7 +256,10 @@
         <div class="footer-content">
           <div class="footer-section">
             <h3>DXN সম্পর্কে</h3>
-            <p>DXN হল একটি আন্তর্জাতিক কোম্পানি, যা মূলত গ্যানোডার্মা ভিত্তিক হেলথ প্রোডাক্টস তৈরি করে। বিশ্বব্যাপী আমাদের কার্যক্রম রয়েছে।</p>
+            <p>
+              DXN হল একটি আন্তর্জাতিক কোম্পানি, যা মূলত গ্যানোডার্মা ভিত্তিক
+              হেলথ প্রোডাক্টস তৈরি করে। বিশ্বব্যাপী আমাদের কার্যক্রম রয়েছে।
+            </p>
           </div>
           <div class="footer-section">
             <h3>দ্রুত লিংক</h3>
@@ -176,7 +278,9 @@
             <div class="social-links">
               <a href="#"><i class="fab fa-facebook"></i></a>
               <a href="#"><i class="fab fa-youtube"></i></a>
-              <a href="https://wa.me/8801707042018" target="_blank"><i class="fab fa-whatsapp"></i></a>
+              <a href="https://wa.me/8801707042018" target="_blank"
+                ><i class="fab fa-whatsapp"></i
+              ></a>
               <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
           </div>
