--- a/index.html
+++ b/index.html
@@ -254,7 +254,12 @@
               <li><a href="products.html">প্রোডাক্টস</a></li>
               <li><a href="business.html">ব্যবসার সুযোগ</a></li>
               <li><a href="success-stories.html">সাফল্যের গল্প</a></li>
-              <li><a href="contact.html">যোগাযোগ</a></li>
+              <li>
+                <a
+                  href="https://wa.me/8801707042018?text=আমি%20DXN%20সম্পর্কে%20জানতে%20চাই"
+                  >যোগাযোগ</a
+                >
+              </li>
             </ul>
           </div>
           <div class="footer-section">
